--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "zod": "^3.25.76",
-  "@supabase/supabase-js": "^2.39.7"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@gradio/client": "^1.17.1",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
